@@ -810,9 +810,9 @@ static void R_DrawViewModel (void)
 
 	if ((cl.v.health <= 0)		 ||
 	    (chase_active.integer)	 ||
-	    (cl.items & IT_INVISIBILITY) ||
-	    (!r_drawviewmodel.integer)	 ||
-	    (r_fov_greater_than_90))
+//rjr	    (cl.items & IT_INVISIBILITY) ||
+//O.S.	    (r_fov_greater_than_90)	 ||
+	    (!r_drawviewmodel.integer))
 	{
 		return;
 	}
